# ungoogled-chromium-windows-x64

./: build.py  flags.windows.gn
.github/actions/stage/: index.js
.github/workflows/: main.yml  update-submodules.yml
patches/: series
patches/test/: per_site_overrides.patch
patches/ungoogled-chromium/windows/: windows-optimization.patch
