chrome_pgo_phase=2
enable_swiftshader=false
ffmpeg_branding="Chrome"
is_clang=true
is_component_build=false
is_debug=false
is_official_build=true
proprietary_codecs=true
enable_ffmpeg_video_decoders = true
target_cpu="x64"
use_sysroot=false
dcheck_always_on=false
blink_symbol_level=0
v8_symbol_level=0
symbol_level=0
enable_rust=true
enable_media_foundation_widevine_cdm = true
enable_mse_mpeg2ts_stream_parser=true
enable_platform_hevc = true
enable_platform_ac3_eac3_audio = true
enable_platform_dolby_vision = true
enable_platform_mpeg_h_audio = true
enable_hevc_parser_and_hw_decoder = true
use_thin_lto = true
thin_lto_enable_optimizations = true
toolchain_supports_rust_thin_lto = true
dcheck_always_on = false
use_siso = true
use_remoteexec = false
win_enable_cfg_guards = true
disable_fieldtrial_testing_config = true
